--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node ./dist/App/server.js",
     "predev": "npm run build",
     "dev": "nodemon --watch \"./src/**\" ./src/App/server.ts",
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "db:reset": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
