--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,8 +31,9 @@ services:
       - APP_PORT=${APP_PORT}
       - JWT_SECRET=${JWT_SECRET}
       - DB_USER=${DB_USER}
-      - DB_HOST=database
-      - DB_PORT=3306
+      - DB_PASS=${DB_PASS}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
     healthcheck:
       test: ["CMD", "lsof", "-t", "-i:3001"]
       timeout: 10s
@@ -44,7 +45,7 @@ services:
     container_name: sdb-mysql
     platform: linux/x86_64
     ports:
-      - 3002:3306
+      - 3003:3306
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     restart: 'always'
