--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^8.5.6",
+    "@types/node": "^16.11.7",
+    "@types/sequelize": "^4.28.10",
     "nodemon": "^2.0.15",
     "sequelize-cli": "^6.3.0",
     "ts-node": "^10.7.0",
